--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,32 @@ li a:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+.container{
+  width:100%;
+  padding-right:15px;
+  padding-left:15px;
+  margin-right:auto;
+  margin-left:auto
+}
+
+.copy {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 40px;
+  background-color: #1f1f1f;
+  text-align: center;
+}
+
 .footer {
   position: relative;
   z-index: 1;
   width: 100%;
   height: 40px;
-  background-color: #1f1f1f; }
+  background-color: #1f1f1f; 
+  text-align: center;
+}
+
 .footer .contact-info {
   position: relative;
   z-index: 1; 
@@ -90,30 +110,4 @@ li a:hover {
   color: #ffffff; 
 }
 
-.footer .follow-us {
-  position: relative;
-  z-index: 1; 
-  }
-.footer .follow-us span {
-  display: inline-block;
-  height: 40px;
-  padding: 0 20px;
-  line-height: 40px;
-  color: rgba(255, 255, 255, 0.2);
-  font-size: 12px;
-  text-transform: uppercase; 
-  }
-.footer .follow-us a {
-  display: inline-block;
-  height: 40px;
-  padding: 0 20px;
-  line-height: 40px;
-  color: rgba(255, 255, 255, 0.2);
-  font-size: 12px;
-  border-left: 1px solid #4c4c4c; }
-.footer .follow-us a span {
-  text-transform: uppercase; 
-}
-.footer .follow-us a:hover, .footer .follow-us a:focus {
-  color: #ffffff; 
-}
+
