--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ li a:hover {
   margin-left:auto
 }
 
+
 .copy {
   position: relative;
   z-index: 1;
@@ -79,6 +80,116 @@ li a:hover {
   height: 40px;
   background-color: #1f1f1f;
   text-align: center;
+}
+
+.home
+{
+  width: 100%;
+  height: 100px;
+}
+.home_background
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.home_content
+{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+}
+.home_button
+{
+  width: 225px;
+  height: 43px;
+  background: #2e21df;
+  text-align: center;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+.home_button:hover
+{
+  box-shadow: 0px 10px 40px rgba(0,0,0,0.3);
+}
+.home_button a
+{
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  font-weight: 600;
+  line-height: 43px;
+  letter-spacing: 0.3em;
+}
+
+.services
+{
+  padding-top: 60px;
+  padding-bottom: 80px;
+  background: #FFFFFF;
+}
+.services_background
+{
+  position: absolute;
+  left: 0;
+  top: 339px;
+  width: 100%;
+  height: calc(100% - 339px);
+  background: #f8f8f8;
+}
+.services_row
+{
+  margin-top: 54px;
+}
+.service
+{
+  border: solid 1px #f1f1f1;
+}
+.service_image
+{
+  width: 100%;
+}
+.service_image img
+{
+  max-width: 100%;
+}
+.service_body
+{
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 19px;
+  padding-bottom: 47px;
+  background: #FFFFFF;
+}
+.service_title a
+{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000000;
+  -webkit-transition: all 200ms ease;
+  -moz-transition: all 200ms ease;
+  -ms-transition: all 200ms ease;
+  -o-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+.service_title a:hover
+{
+  color: #2e21df;
+}
+.service_text
+{
+  margin-top: 16px;
 }
 
 .footer {
@@ -110,4 +221,11 @@ li a:hover {
   color: #ffffff; 
 }
 
+.row{
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-wrap:wrap;flex-wrap:wrap;
+  margin-right:-15px;
+  margin-left:-15px
+}
 
