--- a/style.css
+++ b/style.css
@@ -19,3 +19,51 @@ header.b-ground {
   background-attachment: scroll;
   background-size: cover;
 }
+
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px;   
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical;
+}
+
+input[type=submit] {
+  width: 225px;
+  height: 43px;
+  background: #2e21df;
+  text-align: center;
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+label {
+	font-family: sans-serif;
+	font-size: 28px;
+	padding: 10px;
+	margin: 0px;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 50%;
+}
+
+.head {
+	font-family: sans-serif;
+	font-size: 38px;
+	text-align: center;
+	padding: 10px;
+	margin: 10px;
+}
